# click_bug_demo

./: pyproject.toml
my_library/: cli.py
my_library/commands/: test.py  tokenize.py
